--- a/templates/session/playlist.html.twig
+++ b/templates/session/playlist.html.twig
@@ -85,15 +85,9 @@
                             <button class="btn btn-success" onclick="exportToService('spotify')">
                                 <i class="bi bi-spotify"></i> Spotify
                             </button>
-                            <button class="btn btn-danger" onclick="exportToService('youtube')">
-                                <i class="bi bi-youtube"></i> YouTube Music
-                            </button>
-                            <button class="btn btn-info text-white" onclick="exportToService('qobuz')">
-                                Qobuz
-                            </button>
                         </div>
                         <small class="text-muted d-block mt-2">
-                            Note: Vous devrez vous connecter au service pour exporter la playlist
+                            Note: Vous devrez vous connecter à Spotify pour exporter la playlist
                         </small>
                     </div>
                 </div>
