--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
                 </h1>
                 <p class="lead">Pour le nouvel An avec mes amis, on crée une playlist où chacun mets en amont de la soirée 10, 15 ou 20 titres (selon combien on est) et cette playlist tourne en aléatoire.</p>
                 <p>On se fait un petit jeu en même temps, si quelqu'un trouve l'artiste, le titre et qui a mis cette musique, il offre une gorgée à qui il souhaite pour chacune des bonnes réponses.</p>
-                <p>Bref, que vous fassiez ça ou que vous ayez besoin de faire ce type de playlist, voilà l'outil idéal :)</p>
+                <p>Bref, que vous fassiez ça ou que vous ayez besoin de faire ce type de playlist, voilà l'outil idéal !</p>
             </div>
 
             {% for message in app.flashes('error') %}
