--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,6 +13,10 @@
                 <p class="lead">Pour le nouvel An avec mes amis, on crée une playlist où chacun mets en amont de la soirée 10, 15 ou 20 titres (selon combien on est) et cette playlist tourne en aléatoire.</p>
                 <p>On se fait un petit jeu en même temps, si quelqu'un trouve l'artiste, le titre et qui a mis cette musique, il offre une gorgée à qui il souhaite pour chacune des bonnes réponses.</p>
                 <p>Bref, que vous fassiez ça ou que vous ayez besoin de faire ce type de playlist, voilà l'outil idéal !</p>
+                <p>
+                En gros, une première personne crée une "session" avec le nombre de titres par participant. Ensuite, elle envoie le code de la session, les autres ont juste à la renseigner sur le site pour que la rejoindre.
+De là, vous pouvez chercher vos titres et/ou importer votre playlist spotify, valider puis quand tout le monde a validé, on peut exporter la playlist sur Spotify pour la personne qui la lancera.
+</p>
             </div>
 
             {% for message in app.flashes('error') %}
